servo/tests/compiletest/plugin/compile-fail/deny_public_fields.rs
#
!
[
allow
(
dead_code
)
]
#
[
macro_use
]
extern
crate
deny_public_fields
;
#
[
derive
(
DenyPublicFields
)
]
struct
Foo
{
pub
v1
:
i32
v2
:
i32
}
fn
main
(
)
{
}
